examples/bad/static_error_op_not_supported1.ps
[bool] arrb1 = [true, false];
[bool] arrb2 = [false, true];
println(arr1 > arr2);